syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";

option go_package = "/helloworld";

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
        post: "/v1/example/echo"
        body: "*"
      };
  }
  rpc GetCityWeather(GetCityWeatherRequest) returns (CityWeatherResponse) {
    option (google.api.http) = {
        get:"/v1/citys/{name}"
    };
  }
}

message GetCityWeatherRequest {
  string name = 1; // Mapped to URL path.
}

message CityWeatherResponse {
  string name = 1; // The resource content.
  string temperature = 2; // The resource content.
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}